Closed
Bug 1639553
Opened 5 years ago
Closed 5 years ago
Perma xpcom/base/AppShutdown.cpp:23:10: fatal error: 'mozilla/XULStore.h' file not found when Gecko 78 merges to beta on 2020-06-01
Categories
(Core :: SQLite and Embedded Database Bindings, defect)
Core
SQLite and Embedded Database Bindings
Tracking
()
VERIFIED
FIXED
mozilla78
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox76 | --- | unaffected |
firefox77 | --- | unaffected |
firefox78 | + | verified |
People
(Reporter: aryx, Assigned: alexical)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
central-as-beta simulation: https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=7746ff7038aa0e556cd7f8cc2e34a75c10124de6&selectedTaskRun=bf1iwpRTQE-3nu7fx86EYA-0
Failure log: https://treeherder.mozilla.org/logviewer.html#?job_id=303089314&repo=try
![]() |
Reporter | |
Updated•5 years ago
|
Flags: needinfo?(dothayer)
Updated•5 years ago
|
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → dothayer
Flags: needinfo?(dothayer)
Assignee | ||
Comment 1•5 years ago
|
||
Pushed by dothayer@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ec19c0ab7a8b
Only flush xulstore writes if using new xulstore r=lina
![]() |
||
Comment 3•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
![]() |
Reporter | |
Comment 4•5 years ago
|
||
Verified fixed with yesterday's simulation: https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Crunnable&revision=0a2a522a5a5d64fa1bd762b819bcf5aa86d12484
Status: RESOLVED → VERIFIED
Updated•5 years ago
|
Has Regression Range: --- → yes
Keywords: regression
Updated•1 year ago
|
Product: Toolkit → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•