Bug 1639553 - Only flush xulstore writes if using new xulstore r=lina

Differential Revision: https://phabricator.services.mozilla.com/D76169